# Lattice

./: .gitignore  Allcock.py  Annotated Bibliography.md  BinLattice.py  Circle.py  Commons.py  DiscForm.py  FPSearch.py  Genus.py  IntVectors.py  Lattice.py  LatticeUtils.py  ReflectiveTests.py  VSearch.py  Vinberg.py  build.sh  fp_search.cpp  list_lat.py  pyproject.toml  render_chamber.py  run.ipynb  run.py  test_binlattice.py  vsearch.cpp
